--- a/eventify_back_end/.gitignore
+++ b/eventify_back_end/.gitignore
@@ -1,18 +1,30 @@
-# Node modules
-node_modules/
-
 # Logs
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Environment variables
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+
 .env
 
-# OS files
-.DS_Store
-Thumbs.db
 
-# Build files
-dist/
-build/
+node_modules
